kubernetes/k3s-01/workloads/radarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        access-postgres: "true"
    spec:
      containers:
        - name: radarr
          image: docker.io/linuxserver/radarr:6.4.4@sha256:c960f2b52ec6542dbe6707c5a21e696a7c74fd8b17997454f4d10a55dacee133
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-downloads
              mountPath: /downloads
            - name: radarr-movies
              mountPath: /movies
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: radarr-downloads
        - name: radarr-movies
          persistentVolumeClaim:
            claimName: radarr-movies
