kubernetes/k3s-01/workloads/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: torrenting
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
  selector:
    app: radarr
