kubernetes/k3s-01/workloads/radarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: torrenting
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.47fc5c.com`)
      kind: Rule
      services:
        - name: radarr
          kind: Service
          port: 7878
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: radarr-certificate
